refactor: 开放App管理系统——install/uninstall/isSystemApp
- IPhoneApp 添加 onUninstall/isSystemApp/getVersion/getAuthor/getDescription
- PhoneScreenRegistry 用 LinkedHashMap 实现 install/uninstall/isInstalled API
- 系统App标记 isSystemApp=true，不可卸载
- 内建App全部标记为系统App
- 任何模组可运行时动态 install/uninstall App
- 模拟真实手机操作系统的App管理机制

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>